// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseCommand alreadyUsedOption 1`] = `
{
  "charactersToDrop": 3,
  "suggestions": [
    {
      "allNames": [
        "--bug-report",
      ],
      "description": "Display system information for bug report",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--bug-report",
      "priority": 50,
    },
  ],
}
`;

exports[`parseCommand alreadyUsedSuggestion 1`] = `undefined`;

exports[`parseCommand command 1`] = `
{
  "charactersToDrop": 3,
  "suggestions": [
    {
      "allNames": [
        "stage",
      ],
      "description": "Add file contents to the staging area",
      "icon": "📦",
      "insertValue": undefined,
      "name": "stage",
      "priority": 50,
    },
    {
      "allNames": [
        "status",
      ],
      "description": "Show the working tree status",
      "icon": "📦",
      "insertValue": undefined,
      "name": "status",
      "priority": 50,
    },
    {
      "allNames": [
        "stash",
      ],
      "description": "Temporarily stores all the modified tracked files",
      "icon": "📦",
      "insertValue": undefined,
      "name": "stash",
      "priority": 50,
    },
  ],
}
`;

exports[`parseCommand completePrefixFilter 1`] = `
{
  "charactersToDrop": 4,
  "suggestions": [
    {
      "allNames": [
        "status",
      ],
      "description": "Show the working tree status",
      "icon": "📦",
      "insertValue": undefined,
      "name": "status",
      "priority": 50,
    },
  ],
}
`;

exports[`parseCommand completedOptionWithArg 1`] = `
{
  "charactersToDrop": 0,
  "suggestions": [
    {
      "allNames": [
        "--artifact-server-path",
      ],
      "description": "Defines the path where the artifact server stores uploads and retrieves downloads from. If not specified the artifact server will not start",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--artifact-server-path",
      "priority": 50,
    },
    {
      "allNames": [
        "--artifact-server-port",
      ],
      "description": "Defines the port where the artifact server listens (will only bind to localhost)",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--artifact-server-port",
      "priority": 50,
    },
    {
      "allNames": [
        "--container-architecture",
      ],
      "description": "Architecture which should be used to run containers, e.g.: linux/amd64. If not specified, will use host default architecture. Requires Docker server API Version 1.41+. Ignored on earlier Docker server platforms",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--container-architecture",
      "priority": 50,
    },
    {
      "allNames": [
        "--container-daemon-socket",
      ],
      "description": "Path to Docker daemon socket which will be mounted to containers",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--container-daemon-socket",
      "priority": 50,
    },
    {
      "allNames": [
        "--directory",
        "-C",
      ],
      "description": "Working directory",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--directory",
      "priority": 50,
    },
    {
      "allNames": [
        "--dryrun",
        "-n",
      ],
      "description": "Dryrun mode",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--dryrun",
      "priority": 50,
    },
    {
      "allNames": [
        "--env-file",
      ],
      "description": "Environment file to read and use as env in the containers",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--env-file",
      "priority": 50,
    },
    {
      "allNames": [
        "--github-instance",
      ],
      "description": "GitHub instance to use. Don't use this if you are not using GitHub Enterprise Server",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--github-instance",
      "priority": 50,
    },
    {
      "allNames": [
        "--insecure-secrets",
      ],
      "description": "NOT RECOMMENDED! Doesn't hide secrets while printing logs",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--insecure-secrets",
      "priority": 50,
    },
    {
      "allNames": [
        "--json",
      ],
      "description": "Output logs in json format",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--json",
      "priority": 50,
    },
    {
      "allNames": [
        "--no-recurse",
      ],
      "description": "Flag to disable running workflows from subdirectories of specified path in '--workflows'/'-W' flag",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--no-recurse",
      "priority": 50,
    },
    {
      "allNames": [
        "--no-skip-checkout",
      ],
      "description": "Do not skip actions/checkout",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--no-skip-checkout",
      "priority": 50,
    },
    {
      "allNames": [
        "--quiet",
        "-q",
      ],
      "description": "Disable logging of output from steps",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--quiet",
      "priority": 50,
    },
    {
      "allNames": [
        "--secret-file",
      ],
      "description": "File with list of secrets to read from (e.g. --secret-file .secrets)",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--secret-file",
      "priority": 50,
    },
    {
      "allNames": [
        "--verbose",
        "-v",
      ],
      "description": "Verbose output",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--verbose",
      "priority": 50,
    },
    {
      "allNames": [
        "--workflows",
        "-W",
      ],
      "description": "Path to workflow file(s)",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--workflows",
      "priority": 50,
    },
    {
      "allNames": [
        "--help",
        "-h",
      ],
      "description": "Display help",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--help",
      "priority": 50,
    },
    {
      "allNames": [
        "--no-descriptions",
      ],
      "description": "Disable completion descriptions",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--no-descriptions",
      "priority": 50,
    },
  ],
}
`;

exports[`parseCommand emptySuggestions 1`] = `
{
  "charactersToDrop": 2,
  "suggestions": [],
}
`;

exports[`parseCommand exclusiveOnOption 1`] = `
{
  "charactersToDrop": 4,
  "suggestions": [
    {
      "allNames": [
        "--nobreak",
      ],
      "description": "Print a newline between matches in different files. Enabled by default",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--nobreak",
      "priority": 50,
    },
    {
      "allNames": [
        "--nocolor",
      ],
      "description": "Don't print color codes in results",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--nocolor",
      "priority": 50,
    },
    {
      "allNames": [
        "--nofilename",
      ],
      "description": "Don't print file names",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--nofilename",
      "priority": 50,
    },
    {
      "allNames": [
        "--nofollow",
      ],
      "description": "Don't follow symlinks",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--nofollow",
      "priority": 50,
    },
    {
      "allNames": [
        "--nogroup",
      ],
      "description": "Refrains from lumping matches in the same file together, and instead places the filename at the start of each match line",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--nogroup",
      "priority": 50,
    },
    {
      "allNames": [
        "--noheading",
      ],
      "description": "Don't print filenames above matching contents",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--noheading",
      "priority": 50,
    },
    {
      "allNames": [
        "--nommap",
      ],
      "description": "Don't use of memory-mapped I/O. Defaults to true on platforms where mmap() is faster than read(). (All but macOS.)",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--nommap",
      "priority": 50,
    },
    {
      "allNames": [
        "--nomultiline",
      ],
      "description": "Don't match regexes across newlines",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--nomultiline",
      "priority": 50,
    },
    {
      "allNames": [
        "-n",
        "--norecurse",
      ],
      "description": "Don't recurse into directories",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--norecurse",
      "priority": 50,
    },
    {
      "allNames": [
        "--nonumbers",
      ],
      "description": "Don't print line numbers",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--nonumbers",
      "priority": 50,
    },
  ],
}
`;

exports[`parseCommand fullyTypedSuggestion 1`] = `
{
  "charactersToDrop": 2,
  "suggestions": [
    {
      "allNames": [
        "-W",
      ],
      "description": "Display whiteouts when scanning directories.  (-S) flag)",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "-W",
      "priority": 50,
    },
    {
      "allNames": [
        "-w",
      ],
      "description": "Force raw printing of non-printable characters.  This is the default when output is not to a terminal",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "-w",
      "priority": 50,
    },
  ],
}
`;

exports[`parseCommand loadSpec 1`] = `
{
  "charactersToDrop": 3,
  "suggestions": [
    {
      "allNames": [
        "add-tags-to-certificate",
      ],
      "description": "Adds one or more tags to an ACM certificate. Tags are labels that you can use to identify and organize your AWS resources. Each tag consists of a key and an optional value. You specify the certificate on input by its Amazon Resource Name (ARN). You specify the tag by using a key-value pair.  You can apply a tag to just one certificate if you want to identify a specific characteristic of that certificate, or you can apply the same tag to multiple certificates if you want to filter for a common relationship among those certificates. Similarly, you can apply the same tag to multiple resources if you want to specify a relationship among those resources. For example, you can add the same tag to an ACM certificate and an Elastic Load Balancing load balancer to indicate that they are both used by the same website. For more information, see Tagging ACM certificates.  To remove one or more tags, use the RemoveTagsFromCertificate action. To view all of the tags that have been applied to the certificate, use the ListTagsForCertificate action",
      "icon": "📦",
      "insertValue": undefined,
      "name": "add-tags-to-certificate",
      "priority": 50,
    },
  ],
}
`;

exports[`parseCommand noOptionsSuggestedAfterVariadicArg 1`] = `
{
  "argumentDescription": undefined,
  "charactersToDrop": 1,
  "suggestions": [],
}
`;

exports[`parseCommand partialPrefixFilter 1`] = `
{
  "charactersToDrop": 3,
  "suggestions": [
    {
      "allNames": [
        "stage",
      ],
      "description": "Add file contents to the staging area",
      "icon": "📦",
      "insertValue": undefined,
      "name": "stage",
      "priority": 50,
    },
    {
      "allNames": [
        "status",
      ],
      "description": "Show the working tree status",
      "icon": "📦",
      "insertValue": undefined,
      "name": "status",
      "priority": 50,
    },
    {
      "allNames": [
        "stash",
      ],
      "description": "Temporarily stores all the modified tracked files",
      "icon": "📦",
      "insertValue": undefined,
      "name": "stash",
      "priority": 50,
    },
  ],
}
`;

exports[`parseCommand providedArgDescription 1`] = `
{
  "argumentDescription": "actor",
  "charactersToDrop": 0,
  "suggestions": [],
}
`;

exports[`parseCommand providedSuggestion 1`] = `
{
  "argumentDescription": "Shell to generate completions for",
  "charactersToDrop": 0,
  "suggestions": [
    {
      "allNames": [
        "zsh",
      ],
      "description": undefined,
      "icon": "📀",
      "insertValue": undefined,
      "name": "zsh",
      "priority": 50,
    },
  ],
}
`;
